# SauerkrautLM-Doom-MultiVec

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/about/: contributing.md  license.md
docs/api/: ascii.md  inference.md  model.md  training.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: architecture.md  benchmark.md  data-pipeline.md  deployment.md  gameplay.md  inference.md  training.md
models/doom-multivec-5L/: ascii_vocab.json  config.json  hash_config.json  model_info.json  modeling_doom_hash.py  special_tokens_map.json  tokenizer.json  tokenizer_config.json
models/doom-multivec-trained/: README.md  config.json  special_tokens_map.json
models/doom-tokenizer/: ascii_vocab.json  tokenizer.json  tokenizer_config.json
paper/: doom_multivec.tex  generate_figures.py  references.bib
scripts/: benchmark.py  collect_data.py  collect_vizdoom_depth.py  create_model.py  create_tokenizer.py  export_onnx.py  play_doom_visual.py  record_human.py  train_classifier.py
src/doom_multivec/: __init__.py
src/doom_multivec/ascii/: charset.py  converter.py
src/doom_multivec/doom/: engine.py  scenarios.py
src/doom_multivec/inference/: __init__.py
src/doom_multivec/model/: __init__.py  classifier.py  tokenizer.py
src/doom_multivec/training/: __init__.py  action_mapping.py  dataset.py  teacher.py
